# adaptive-hierarchical-reconciliation-with-attention-pruning

./: .gitignore  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py  verify_project.py
configs/: ablation.yaml  default.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/adaptive_hierarchical_reconciliation_with_attention_pruning/: __init__.py
src/adaptive_hierarchical_reconciliation_with_attention_pruning/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_hierarchical_reconciliation_with_attention_pruning/training/: __init__.py  trainer.py
src/adaptive_hierarchical_reconciliation_with_attention_pruning/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
